--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Jameson Machining Inc.</title>
-   <link rel="stylesheet" href="styles.css">
+   <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
    <!-- Header with Logo -->
    <header>
-       <img src="images/logo.png" alt="Jameson Machining Logo" class="logo">
+       <img src="logo.png" alt="Jameson Machining Logo" class="logo">
        <h1>Jameson Machining Inc.</h1>
        <p>Precision Grinding Services in Oakville, Ontario</p>
    </header>
