--- a/index.html
+++ b/index.html
@@ -25,11 +25,14 @@
 
  <!-- Hero Section -->
  <section class="hero">
-   <h2>High-Precision Grinding for Aerospace, Automotive & More</h2>
-   <p>We specialize in cylindrical, surface, and centerless grinding with tight tolerances.</p>
-   <a href="#contact" class="btn">Get a Quote</a>
- </section>
-
+  <h2>Grind with Precision. Deliver with Confidence.</h2>
+  <p>
+    Specializing in cylindrical, surface, and centerless grinding, we offer precision machining solutions tailored to meet your needs with accuracy and consistency. <br><br>
+    Whether it's OD grinding, ID grinding, chrome finishing, or custom precision work — we handle it all. With capacity up to 24” diameter and 80” length, Jameson Machining Inc. is your one-stop shop for dependable, high-tolerance grinding.<br><br>
+    <strong>We grind with passion.</strong>
+  </p>
+  <a href="#contact" class="btn">Get a Quote</a>
+</section>
  <!-- Services Section -->
  <section id="services">
    <h2>Our Services</h2>
