--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
  <header>
    <img src="logo.png" alt="Jameson Machining Logo" class="logo" />
    <h1>Jameson Machining Inc.</h1>
-   <p>Precision Grinding Services in Oakville, Ontario</p>
+   <p>Grind with Passion</p>
  </header>
 
  <!-- Navigation -->
@@ -25,10 +25,10 @@
 
  <!-- Hero Section -->
  <section class="hero">
-  <h2>Grind with Precision. Deliver with Confidence.</h2>
+  <h2>precision Grinding Services</h2>
   <p>
     Specializing in cylindrical, surface, and centerless grinding, we offer precision machining solutions tailored to meet your needs with accuracy and consistency. <br><br>
-    Whether it's OD grinding, ID grinding, chrome finishing, or custom precision work — we handle it all. With capacity up to 24” diameter and 80” length, Jameson Machining Inc. is your one-stop shop for dependable, high-tolerance grinding.<br><br>
+    Whether it's OD grinding, ID grinding, chrome finishing, or custom precision work — we handle it all. It's your one-stop shop for dependable, high-tolerance grinding solutions .<br><br>
     <strong>We grind with passion.</strong>
   </p>
   <a href="#contact" class="btn">Get a Quote</a>
