--- a/index.html
+++ b/index.html
@@ -34,21 +34,46 @@
   <a href="#contact" class="btn">Get a Quote</a>
 </section>
  <!-- Services Section -->
- <section id="services">
-   <h2>Our Services</h2>
-   <div class="service-box">
-     <h3>Cylindrical Grinding</h3>
-     <p>Grinding up to 24” diameter and 80” length with high precision.</p>
-   </div>
-   <div class="service-box">
-     <h3>Surface Grinding</h3>
-     <p>Achieve flatness and surface finish tolerances as tight as 0.0002".</p>
-   </div>
-   <div class="service-box">
-     <h3>Centerless Grinding</h3>
-     <p>For high-volume, high-accuracy grinding of round parts.</p>
-   </div>
- </section>
+  <section id="services" style="padding: 40px; font-family: Arial, sans-serif; background-color: #f9f9f9;">
+  <div style="max-width: 900px; margin: auto;">
+    <h2 style="text-align: center; margin-bottom: 30px;">Our Grinding Services</h2>
+
+    <div style="margin-bottom: 40px;">
+      <h3>Cylindrical Grinding</h3>
+      <p>
+        We specialize in precision shaft grinding, but our capabilities go beyond — we can grind
+        parts up to <strong>24 inches in diameter</strong> and <strong>80 inches in length</strong>,
+        including <strong>internal (ID/IID) grinding</strong>. Whether it’s chrome, custom jobs, or
+        challenging geometries, our equipment is built for it. We've invested in a full range of
+        <strong>custom and pre-made grinding fixtures</strong>, allowing us to deliver repeatable
+        accuracy without the need for customer-supplied tooling. Combined with our use of
+        <strong>high-performance carbon, diamond, and other premium grinding wheels</strong>, we ensure
+        consistent, high-quality results across a wide variety of applications.
+      </p>
+    </div>
+
+    <div style="margin-bottom: 40px;">
+      <h3>Surface Grinding</h3>
+      <p>
+        Our surface grinding services focus on achieving <strong>flatness and tight surface finish
+        tolerances</strong>. Backed by our investment in <strong>precision fixturing</strong> and
+        <strong>top-grade grinding wheels</strong>, we deliver clean, consistent finishes even on
+        challenging tool steels or specialty components. Our pre-made fixture setups ensure we can handle
+        one-offs or production work efficiently — without delays or compromise in quality.
+      </p>
+    </div>
+
+    <div>
+      <h3>Centerless Grinding</h3>
+      <p>
+        We also offer limited centerless grinding capabilities through our
+        <strong>German-engineered centerless belt grinding system</strong>. Ideal for light production
+        and cleanup work on round parts, it provides smooth, accurate finishes where traditional
+        center-type setups aren’t required.
+      </p>
+    </div>
+  </div>
+</section>
 
  <!-- Contact Section -->
  <section id="contact">
