--- a/index.html
+++ b/index.html
@@ -27,8 +27,8 @@
  <section class="hero">
   <h2>Precison Grinding Services</h2>
   <p>
-    Specializing in cylindrical, surface, and centerless grinding, we offer precision machining solutions tailored to meet your needs with accuracy and consistency. <br><br>
-    Whether it's OD grinding, ID grinding, chrome finishing, or custom precision work — we handle it all. It's your one-stop shop for dependable,high-tolerance grinding solutions<br><br>
+    
+﻿ At Jameson Machining Inc., we deliver high-precision grinding solutions tailored to meet your toughest requirements. With a focus on shaft work, tight tolerances, and surface finish quality, we’ve built our shop around performance, repeatability, and speed — all backed by proven tooling and top-tier grinding technology.<br><br>
     <strong>We grind with passion.</strong>
   </p>
   <a href="#contact" class="btn">Get a Quote</a>
