--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <h2>Precison Grinding Services</h2>
   <p>
     
-﻿ At Jameson Machining Inc., we deliver high-precision grinding solutions tailored to meet your toughest requirements. With a focus on shaft work, tight tolerances, and surface finish quality, we’ve built our shop around performance, repeatability, and speed — all backed by proven tooling and top-tier grinding technology.<br><br>
+﻿ At Jameson Machining Inc., we deliver high-precision grinding solutions tailored to meet your toughest requirements. With a focus on shaft work, tight tolerances, and surface finish quality, we’ve built our shop around performance, repeatability, and speed — all backed by proven tooling and top quality surface finish.<br><br>
     <strong>We grind with passion.</strong>
   </p>
   <a href="#contact" class="btn">Get a Quote</a>
