--- a/index.html
+++ b/index.html
@@ -5,11 +5,23 @@
  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
  <title>Jameson Machining Inc.</title>
  <link rel="stylesheet" href="style.css" />
+ <style>
+  .logo-fade {
+    opacity: 0;
+    animation: fadeIn 1.5s ease-in-out forwards;
+  }
+
+  @keyframes fadeIn {
+    to { opacity: 1; }
+  }
+</style>
+
 </head>
 <body>
  <!-- Header with Logo -->
  <header>
-   <img src="logo.png" alt="Jameson Machining Logo" class="logo" />
+   <img src="logo.png" alt="Jameson Machining Logo" class="logo-fade" style="max-width: 300px; height: auto;" />
+
    <h1>Jameson Machining Inc.</h1>
    <p>"Grind with Passion"</p>
  </header>
