--- a/index.html
+++ b/index.html
@@ -46,11 +46,14 @@
   <a href="#contact" class="btn">Get a Quote</a>
 </section>
  <!-- Services Section -->
-  <section id="services" style="padding: 40px; font-family: Arial, sans-serif; background-color: #f9f9f9;">
+  
+<section id="services" style="padding: 40px; font-family: Arial, sans-serif; background-color: #f9f9f9;">
   <div style="max-width: 900px; margin: auto;">
     <h2 style="text-align: center; margin-bottom: 30px;">Our Grinding Services</h2>
 
+    <!-- Cylindrical Grinding -->
     <div style="margin-bottom: 40px;">
+      <img src="F981F3D2-33A7-42AC-9D60-AA369B521DEC.jpeg" alt="Cylindrical Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
       <h3>Cylindrical Grinding</h3>
       <p>
         We specialize in precision shaft grinding, but our capabilities go beyond — we can grind
@@ -64,7 +67,9 @@
       </p>
     </div>
 
+    <!-- Surface Grinding -->
     <div style="margin-bottom: 40px;">
+      <img src="FCAA1909-7248-49A0-AF3A-4E4F398D8726.jpeg" alt="Surface Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
       <h3>Surface Grinding</h3>
       <p>
         Our surface grinding services focus on achieving <strong>flatness and tight surface finish
@@ -75,7 +80,9 @@
       </p>
     </div>
 
+    <!-- Centerless Grinding -->
     <div>
+      <img src="F7866ED7-ED29-4F93-A014-64C2E0055480.webp" alt="Centerless Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
       <h3>Centerless Grinding</h3>
       <p>
         We also offer limited centerless grinding capabilities through our
@@ -86,7 +93,6 @@
     </div>
   </div>
 </section>
-
  <!-- Contact Section -->
  <section id="contact">
    <h2>Contact Us</h2>
