--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
     <!-- Cylindrical Grinding -->
     <div style="margin-bottom: 40px;">
-      <img src="F981F3D2-33A7-42AC-9D60-AA369B521DEC.jpeg" alt="Cylindrical Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
+      <img src="image1.jpeg" alt="Cylindrical Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
       <h3>Cylindrical Grinding</h3>
       <p>
         We specialize in precision shaft grinding, but our capabilities go beyond — we can grind
@@ -69,7 +69,7 @@
 
     <!-- Surface Grinding -->
     <div style="margin-bottom: 40px;">
-      <img src="FCAA1909-7248-49A0-AF3A-4E4F398D8726.jpeg" alt="Surface Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
+      <img src="image2.jpeg" alt="Surface Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
       <h3>Surface Grinding</h3>
       <p>
         Our surface grinding services focus on achieving <strong>flatness and tight surface finish
@@ -82,7 +82,7 @@
 
     <!-- Centerless Grinding -->
     <div>
-      <img src="F7866ED7-ED29-4F93-A014-64C2E0055480.webp" alt="Centerless Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
+      <img src="image3.jpeg" alt="Centerless Grinding" style="width: 100%; max-width: 600px; display: block; margin: 0 auto 20px auto;">
       <h3>Centerless Grinding</h3>
       <p>
         We also offer limited centerless grinding capabilities through our
