--- a/index.html
+++ b/index.html
@@ -120,7 +120,42 @@
 
  <!-- Footer -->
  <footer>
-   <p>&copy; 2025 Jameson Machining Inc. | All rights reserved.</p>
+  
+   <footer style="background-color: #f2f2f2; padding: 30px 20px; text-align: center; font-family: Arial, sans-serif;">
+  <h3>Contact Information</h3>
+  <p><strong>Location:</strong> 1421 Speer road, Oakville, Ontario, Canada L6L2X5</p>
+  <p><strong>Phone:</strong> +1 9055142255 /p>
+  <p><strong>Email:</strong> <a href="mailto:info@jamesonsgrinding.com">info@jamesonsgrinding.com</a></p>
+
+  <div style="margin-top: 20px;">
+    <!-- LinkedIn -->
+    <a href="https://www.linkedin.com/in/l-james-83a5bbb3" target="_blank" style="margin: 0 10px;">
+      <svg height="20" width="20" style="vertical-align: middle;"><use xlink:href="#linkedin-icon" /></svg> LinkedIn
+    </a>
+
+    <!-- Google Maps -->
+    <a href="https://www.google.com/maps/place/Jameson+Machining+Inc/@43.4222966,-79.7170955,16z/data=!3m1!4b1!4m6!3m5!1s0x882b5df27909d6b7:0xc750c57c4476335f!8m2!3d43.4222966!4d-79.7145206!16s%2Fg%2F11y94n5w07?entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D" target="_blank" style="margin: 0 10px;">
+      <svg height="20" width="20" style="vertical-align: middle;"><use xlink:href="#map-icon" /></svg> Google Maps
+    </a>
+
+    <!-- Apple Maps -->
+    <a href="http://maps.apple.com/?q=Oakville+Ontario+Canada" target="_blank" style="margin: 0 10px;">
+      <svg height="20" width="20" style="vertical-align: middle;"><use xlink:href="#map-icon" /></svg> Apple Maps
+    </a>
+  </div>
+
+  <p style="margin-top: 20px;">&copy; 2025 Jameson Machining Inc. | All rights reserved.</p>
+
+  <!-- Embedded SVG Icons -->
+  <svg style="display: none;">
+    <symbol id="linkedin-icon" viewBox="0 0 24 24">
+      <path fill="currentColor" d="M19 3A2 2 0 0121 5V19A2 2 0 0119 21H5A2 2 0 013 19V5A2 2 0 015 3H19M8.5 17V10.5H6V17H8.5M7.25 9.3A1.25 1.25 0 107.25 6.8 1.25 1.25 0 007.25 9.3M18 17V13.5C18 11.57 17.14 10.5 15.5 10.5C14.46 10.5 13.79 11.1 13.5 11.64V10.5H11V17H13.5V13.75C13.5 12.75 14.12 12.25 14.88 12.25C15.68 12.25 16 12.9 16 13.75V17H18Z" />
+    </symbol>
+    <symbol id="map-icon" viewBox="0 0 24 24">
+      <path fill="currentColor" d="M15.5,4L9.5,6.11L3.5,4V20L9.5,21.89L15.5,20L21.5,21.89V6.11L15.5,4Z" />
+    </symbol>
+  </svg>
+</footer>
  </footer>
 </body>
 </html>
