--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
    <footer style="background-color: #f2f2f2; padding: 30px 20px; text-align: center; font-family: Arial, sans-serif;">
   <h3>Contact Information</h3>
   <p><strong>Location:</strong> 1421 Speer road, Oakville, Ontario, Canada L6L2X5</p>
-  <p><strong>Phone:</strong> +1 9055142255 /p>
+  <p><strong>Phone:</strong> +1-9055142255 </p>
   <p><strong>Email:</strong> <a href="mailto:info@jamesonsgrinding.com">info@jamesonsgrinding.com</a></p>
 
   <div style="margin-top: 20px;">
@@ -136,11 +136,6 @@
     <!-- Google Maps -->
     <a href="https://www.google.com/maps/place/Jameson+Machining+Inc/@43.4222966,-79.7170955,16z/data=!3m1!4b1!4m6!3m5!1s0x882b5df27909d6b7:0xc750c57c4476335f!8m2!3d43.4222966!4d-79.7145206!16s%2Fg%2F11y94n5w07?entry=ttu&g_ep=EgoyMDI1MDMxOS4yIKXMDSoASAFQAw%3D%3D" target="_blank" style="margin: 0 10px;">
       <svg height="20" width="20" style="vertical-align: middle;"><use xlink:href="#map-icon" /></svg> Google Maps
-    </a>
-
-    <!-- Apple Maps -->
-    <a href="http://maps.apple.com/?q=Oakville+Ontario+Canada" target="_blank" style="margin: 0 10px;">
-      <svg height="20" width="20" style="vertical-align: middle;"><use xlink:href="#map-icon" /></svg> Apple Maps
     </a>
   </div>
 
