--- a/index.html
+++ b/index.html
@@ -4,15 +4,19 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Jameson Machining Inc.</title>
-  <link rel="stylesheet" href="style.css" />
+  <<!-- Google Font -->
+<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet"> />
 </head>
 <body>
   <!-- Header -->
   <header class="site-header">
-    <img src="logo.png" alt="Jameson Machining Logo" class="logo-fade" />
+  <img src="logo.png" alt="Jameson Machining Logo" class="logo" />
+
+  <div class="company-info">
     <h1>Jameson Machining Inc.</h1>
-    <p class="tagline">"Grind with Passion"</p>
-  </header>
+    <p class="tagline">Grind with Passion</p>
+  </div>
+</header>
 
   <!-- Navigation -->
   <nav class="navbar">
